--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
-project(my_project VERSION 1.0)
+project(hello_world VERSION 1.0)
 
-# Set compiler flags
+# Set C standard and flags
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED True)
-set(CMAKE_C_FLAGS "-Wall -Werror")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 
-# Add source files to project
+# Specify include directories (relative to project root)
+include_directories(${PROJECT_SOURCE_DIR}/src)
+
+# List source files with relative paths
 set(SOURCES
-        src/main.c
-        # foo.c
-        # bar.c
-        src/hello_world.c src/hello_world.h)
+    ${PROJECT_SOURCE_DIR}/src/main.c
+    ${PROJECT_SOURCE_DIR}/src/hello_world.c
+    ${PROJECT_SOURCE_DIR}/src/hello_world.h
+)
 
-# Add executable target
-add_executable(my_program ${SOURCES})
-
+# Create executable target
+add_executable(hello_world ${SOURCES})
