--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(coroutines VERSION 1.0 LANGUAGES C)
+project(hello_world VERSION 1.0 LANGUAGES C)
 
 # Language & warnings
 set(CMAKE_C_STANDARD 99)
@@ -13,4 +13,4 @@ include_directories(${PROJECT_SOURCE_DIR}/src)
 # Glob all .c and .h files in the src directory
 file(GLOB_RECURSE SOURCES "src/*.c" "src/*.h")
 
-add_executable(coroutines ${SOURCES})
+add_executable(hello_world ${SOURCES})
